Updated Readme.md and CMakeList.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,11 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include(GNUInstallDirs)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${GTEST_INCLUDE_DIRS})
-
-find_package(GTest)
-
-enable_testing()
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH PARENT_DIR)
 
@@ -22,8 +18,6 @@ cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH PARENT_DIR)
 add_executable(${PROJECT_NAME} spsc-queue-test.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${PARENT_DIR}/include)
-
-# target_link_libraries(${PROJECT_NAME} LINK_PUBLIC GTest::GTest GTest::Main)
 
 include(${PARENT_DIR}/cmake/CompilerWarnings.cmake)
 include(${PARENT_DIR}/cmake/Sanitizers.cmake)
@@ -38,6 +32,3 @@ find_program(GCOV_PATH gcov)
 if(NOT GCOV_PATH)
   message(FATAL_ERROR "Code coverage analysis requires gcov!")
 endif()
-
-# include(GoogleTest)
-# gtest_discover_tests(${PROJECT_NAME})
